test/functions/return-type-class-hierarchy/owned-nilable.2.good
owned-nilable.chpl:4: error: unable to resolve return type
